laborations/lab1/test/bad/bad005.cc
using 5;

int main () {
	return 0;
}
